@@ -1,3 +1,8 @@
+2001-10-15  Katsumi Yamaoka  <yamaoka@jpl.org>
+
+	* poe.el (support-timezone-in-numeric-form-and-3rd-arg): Renamed
+	from `support-timezone-in-numeric-form'; add support the 3rd arg.
+
 2001-10-12  TSUCHIYA Masatoshi  <tsuchiya@pine.kuee.kyoto-u.ac.jp>
 
 	* poe.el (format-time-string): Support the construct `%z'.
